src/assets/css/responsive.css
/* ... */
/* Mobile Layout: 320px. */

@media only screen and (max-width: 767px) {
    .comment-form-area {
        margin-left: 0px;
        margin-bottom: 30px;
    }

    .single-blog-post-details,
    .single-blog-sidebar-area,
    .post-comments-area {
        padding-right: 0px;
    }
    
    .menu-btns {
        display: none;
    }
     .about-area{
        padding-top: 87px;
     }
    .about-content-part {
        margin-top: 30px;
    }
    .about-content-part h2 {
        font-size: 30px;
        line-height: 40px;
        margin-bottom: 20px;
        margin-top: 30px;
        
    }
   
   

    .about-content-part-bottom{
        margin-bottom: -70px;
    } 

    .section-title h2 {
        font-size: 50px;
        line-height: 60px;
    }

    .single-project-page-right {
        padding-top: 40px;
    }

    .single-page-hero-area {
        padding-top: 130px;
        padding-bottom: 80px;
    }

    .single-page-hero-area h2 {
        font-size: 50px;
        line-height: 60px;
    }

    .single-page-hero-area p {
        padding-right: 0px;
    }

    .call-to-action-part {
        padding: 30px 30px;
    }

    .call-to-action-part h2 {
        font-size: 40px;
        line-height: 50px;
    }

    .company-design-area {
        padding: 10px 0px;
    }

    .main-hero-area {
        padding-top: 100px;
        padding-bottom: 20px;
    }

    body {
        overflow-x: hidden;

    }

    .main-menu .mobile-logo img {
        width: 40px;
    }

    .about-social ul {
        display: flex;
    }

    .section-title p {
        padding-right: 10px;
    }

  

    .resume-area {
        padding-top: 20px;
    }

    .skill-area {
        padding-top: 20px;
    }

    .services-area {
        padding: 50px 0px;

    }

    .service-item {
        margin-bottom: 30px;
    }

    .projects-area {
        padding-top: 1px;
    }

    .testimonials-area {
        padding-top: 20px;
    }

    .pricing-area {
        padding-top: 20px;
    }

    .client-logo-area {
        padding-top: 20px;
    }

    .contact-area {
        padding-top: 50px;
        padding-bottom: 50px;
    }

    .blog-area {
        padding: 50px 0px;
    }

    .blog-post-caption h2 a {
        font-size: 30px;
    }

    .blog-post-caption {
        padding-left: 20px;
        padding-top: 30px;
    }

    .about-image-part {
        /* padding-bottom: 30px; */
        padding: 80px;
        
    }
    .about-image-part h2 {
        font-size: 45px;
        line-height: 70px;
        /* padding: 30px; */
    }

    .about-image-part p {
       /* line-height: 25px; */
       margin-top: -10px;
       white-space: nowrap;
        
    }


    .fixed-header .main-menu .navbar-collapse li a {
        color: #fff;
    }

    .fixed-header .main-menu .navbar-collapse li a:hover {
        color: var(--primary-color);
    }

    .hero-content {
        padding: 0px 10px;
    }

    .hero-content h1 {
        line-height: 50px;
        font-size: 40px;
        padding: 20px 0px;
    }

    .hero-content .dot-shape {
        left: 3%;
        top: 15%;
    }

    .hero-content .dot-shape2 {
        right: 6%;
        top: 58%;
    }

    .hero-counter-area {
        width: 100%;
    }

    .hero-counter-area .count-text {
        font-size: 30px;
    }

    .hero-counter-area .counter-title {
        font-size: 14px;
    }

}


/* Wide Mobile vertical Layout: 480px. */

@media only screen and (min-width: 480px) and (max-width: 767px) {
    .hero-content {
        padding: 0;
    }
}







@media only screen and (min-width: 1200px) {
    .row-cols-xl-7>* {
        width: 14.2857%;
        -webkit-box-flex: 0;
        -ms-flex: 0 0 auto;
        flex: 0 0 auto;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-10 {
        --bs-gutter-x: 10px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-20 {
        --bs-gutter-x: 20px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-30 {
        --bs-gutter-x: 30px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-40 {
        --bs-gutter-x: 40px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-50 {
        --bs-gutter-x: 50px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-60 {
        --bs-gutter-x: 60px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-70 {
        --bs-gutter-x: 70px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-80 {
        --bs-gutter-x: 80px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-90 {
        --bs-gutter-x: 90px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-100 {
        --bs-gutter-x: 100px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-110 {
        --bs-gutter-x: 110px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-120 {
        --bs-gutter-x: 120px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-130 {
        --bs-gutter-x: 130px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-140 {
        --bs-gutter-x: 140px;
    }
}

@media only screen and (min-width: 1400px) {
    .gap-150 {
        --bs-gutter-x: 150px;
    }
}

@media only screen and (max-width: 375px) {
    .col-small {
        -webkit-box-flex: 0;
        -ms-flex: 0 0 100%;
        flex: 0 0 100%;
        max-width: 100%;
    }
}


@media only screen and (min-width: 376px) {
    .list-style-one li {
        font-size: 20px;
    }
}

@media only screen and (max-width: 479px) {
    .list-style-one.two-column li {
        width: 100%;
    }
}



@media only screen and (max-width: 767px) {
    .menu-social {
        display: none;
    }
}

@media only screen and (max-width: 1399px) {
    .onepage-menu {
        padding-top: 20px;
        padding-bottom: 20px;
    }
}

@media only screen and (max-width: 1399px) {
    .onepage-menu li .menu-item {
        padding-top: 15px;
        padding-bottom: 15px;
    }
}
/* ... */

